--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="main">
                 <div class="navbar">
                     <div class="icon">                       
-                        <img src="./DD.png" alt="duanix" >
+                        <img src="./DD.png" alt="duanix" loading="eager" >
                     </div>                              
             <div class="menu">
                 <ul>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="column-right">
-                <img src="./DUAN.jpg" alt="CATALOGUE"width="100%" height="500px" loading="eager">
+                <img src="./DUAN.jpg" alt="CATALOGUE" loading="lazy" width="100%" height="500px" loading="eager">
             </div>
         </div>
 
@@ -83,26 +83,26 @@
             <div class="services-container">
                 <div class="service-box">
                     <div class="service-icon">
-                        <img src="./icon1.jpg" alt="mug Icon" loading="lazy" style="width: 80px; border-radius: 90%; ">
+                        <img src="./icon1.jpg" alt="mug Icon" loading="eager" style="width: 80px; border-radius: 90%; ">
                     </div>
                     <h3>All Branding Services</h3>
                     <p>With specialized  skilled workers and a well Equiped office, we work around the clock to
                          ensure we leave no stone unturned.</p>
                 </div>
                 <div class="service-box">
-                    <div class="service-icon"><img src="./smart.png" alt="smart working" style="width: 80px;border-radius: 90%;"></div>
+                    <div class="service-icon"><img src="./smart.png" alt="smart working" loading="eager" style="width: 80px;border-radius: 90%;"></div>
                     <h3>Smart & Affordable</h3>
                     <p>At Duanix media compatibilty of customer's needs for a perfect final product is our motive
                         as well as offering  pocket friendly prices.</p>
                 </div>
                 <div class="service-box">
-                    <div class="service-icon"><img src="./icon2.png" alt="delivery image" style="width: 80px;height:70px;border-radius: 90%;"></div>
+                    <div class="service-icon"><img src="./icon2.png" alt="delivery image" loading="eager" style="width: 80px;height:70px;border-radius: 90%;"></div>
                     <h3>Delivery Countrywide</h3>
                     <p>Being based in Nairobi CBD makes it easier for us to offer delivery services to over 5000 plus
                     of our targetted clients Countrywide within 24hrs at a small fee.</p>
                 </div>
                 <div class="service-box">
-                    <div class="service-icon"><img src="./icon4.jpg" alt="online image" style="width: 80px;border-radius: 90%;"></div>
+                    <div class="service-icon"><img src="./icon4.jpg" alt="online image" loading="eager" style="width: 80px;border-radius: 90%;"></div>
                     <h3>Online Support</h3>
                     <p> We respond immediately to your issues raised,Conserns,reviews,feedback
                         and also placing your orders @ Duaix-Media on all our socials or 0718315868 via WhatsApp.</p>
@@ -165,7 +165,7 @@
              <!--Fourth Bar-->
              
              <div class="Partners-section">
-                <h2 style="color:darkblue;">Our Loyal <span style="color: red;"> <strong>Partners</strong></span></h2>
+                <h2 style="color:darkblue; font-size: 35px;">Our Loyal <span style="color: red;"> <strong>Partners</strong></span></h2>
                 <div class="Partners">
                     <div class="patner-card">
                         <img src="./pharis logo.png" alt="Pharitec Image" style="width: 70px;margin-bottom: 15px;margin-top: 25px;">
@@ -238,7 +238,7 @@
                             </p>
                         <button>Customer Care</button>
                         <div class="image-section">
-                            <img src="./customer.jpg" alt="customer care"  style="width: 100%;">
+                            <img src="./customer.jpg" alt="customer care"loading="eager"  style="width: 100%;">
                      </div>
                     </div>
                     </div>
@@ -247,7 +247,7 @@
         <article>
             <div class="container1">
                 <div class="image-placeholder">
-                    <img src="./collo11.jpeg" alt="Tutor"  style="width: 80%;">   
+                    <img src="./collo11.jpeg" alt="Tutor" loading="eager" style="width: 80%;">   
                 </div>
                 <div class="content">
                     <h1>Want to Learn  And <br> <span style="color: goldenrod;">Open your own</span><br> Branding premise?</h1>
