--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="column-right">
-                <img src="./DUAN.jpg" alt="CATALOGUE" loading="lazy" width="100%" height="500px" loading="eager">
+                <img src="./DUAN.jpg" alt="CATALOGUE" loading="lazy" width="100%" height="500px" loading="lazy">
             </div>
         </div>
 
