--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <header>
             <div class="main">
                 <div class="navbar">
-                    <div class="icon">                       
+                    <div class="icon">                   
                         <img src="./images/DD.png" alt="duanix" loading="eager" >
                     </div>                              
             <div class="menu">
@@ -95,19 +95,19 @@
                          ensure we leave no stone unturned.</p>
                 </div>
                 <div class="service-box">
-                    <div class="service-icon"><img src="./images/smart.png" alt="smart working" loading="eager" style="width: 80px;border-radius: 90%;"></div>
+                    <div class="service-icon"><img src=./images/smart.png" alt="smart working" loading="eager" style="width: 80px;border-radius: 90%;"></div>
                     <h3>Smart & Affordable</h3>
                     <p>At Duanix media compatibilty of customer's needs for a perfect final product is our motive
                         as well as offering  pocket friendly prices.</p>
                 </div>
                 <div class="service-box">
-                    <div class="service-icon"><img src="./icon2.png" alt="delivery image" loading="eager" style="width: 80px;height:70px;border-radius: 90%;"></div>
+                    <div class="service-icon"><img src="./images/icon2.png" alt="delivery image" loading="eager" style="width: 80px;height:70px;border-radius: 90%;"></div>
                     <h3>Delivery Countrywide</h3>
                     <p>Being based in Nairobi CBD makes it easier for us to offer delivery services to over 5000 plus
                     of our targetted clients Countrywide within 24hrs at a small fee.</p>
                 </div>
                 <div class="service-box">
-                    <div class="service-icon"><img src="./icon4.jpg" alt="online image" loading="eager" style="width: 80px;border-radius: 90%;"></div>
+                    <div class="service-icon"><img src="./images/icon4.jpg" alt="online image" loading="eager" style="width: 80px;border-radius: 90%;"></div>
                     <h3>Online Support</h3>
                     <p> We respond immediately to your issues raised,Conserns,reviews,feedback
                         and also placing your orders @ Duaix-Media on all our socials or 0718315868 via WhatsApp.</p>
@@ -121,27 +121,27 @@
             <h2 style="color: darkblue;"> Specialization</h2>
             <div class="services-container1">
                 <div class="service-box1">
-                    <div class="service-icon1"><img src="./camera.png" alt="photography image" style="width: 80px;border-radius: 30%;"></div>
+                    <div class="service-icon1"><img src="./images/camera.png" alt="photography image" style="width: 80px;border-radius: 30%;"></div>
                     <h3>Photography</h3>
                 </div>
                 <div class="service-box1">
-                    <div class="service-icon1"><img src="./printer.jpg" alt="printing" style="width: 80px;border-radius: 90%;"></div>
+                    <div class="service-icon1"><img src="./images/printer.jpg" alt="printing" style="width: 80px;border-radius: 90%;"></div>
                     <h3>Normal Printing</h3>
                 </div>
                 <div class="service-box1">
-                    <div class="service-icon1"><img src="./m77.jpeg"  alt="Sublimation" style="width: 80px;border-radius: 90%;"></div>
+                    <div class="service-icon1"><img src="./images/m77.jpeg"  alt="Sublimation" style="width: 80px;border-radius: 90%;"></div>
                     <h3>Sublimation</h3>
                 </div>
                 <div class="service-box1">
-                    <div class="service-icon1"><img src="./eng.jpeg" alt="engraving " style="width: 80px;border-radius: 90%;"></div>
+                    <div class="service-icon1"><img src="./images/eng.jpeg" alt="engraving " style="width: 80px;border-radius: 90%;"></div>
                     <h3>Engraving</h3>
                 </div>
                 <div class="service-box1">
-                    <div class="service-icon1"><img src="./tishoo.png" alt="Embroidery" style="width: 80px;border-radius: 90%;"></div>
+                    <div class="service-icon1"><img src="./images/tishoo.png" alt="Embroidery" style="width: 80px;border-radius: 90%;"></div>
                     <h3>Embroidery</h3>
                 </div>
                 <div class="service-box1">
-                    <div class="service-icon1"><img src="./cupc.png" alt="uv printing" style="width: 80px;border-radius: 90%;"></div>
+                    <div class="service-icon1"><img src="./images/cupc.png" alt="uv printing" style="width: 80px;border-radius: 90%;"></div>
                     <h3>Uv printing</h3>
                 </div>
             </div>
@@ -173,24 +173,24 @@
                 <h2 style="color:darkblue; font-size: 35px;">Our Loyal <span style="color: red;"> <strong>Partners</strong></span></h2>
                 <div class="Partners">
                     <div class="patner-card">
-                        <img src="./pharis logo.png" alt="Pharitec Image" style="width: 70px;margin-bottom: 15px;margin-top: 25px;">
+                        <img src="./images/pharis logo.png logo.png" alt="Pharitec Image" style="width: 70px;margin-bottom: 15px;margin-top: 25px;">
                         <h3 style="margin-top:50px;">Pharis Ifedha</h3>
                         <p>Director at Pharitec Photo Mounts and Branding Limited</p>
                     </div>
                     <div class="patner-card">
-                        <img src="./psam.png" alt="Psam Image" style="width: 100px;">
+                        <img src="./images/psam.png" alt="Psam Image" style="width: 100px;">
                         <h3>Samson Musoka</h3>
                         <p>Director at Psam Tours and Travel agency.
                             He initiates transport & delivery services to various destinations.
                         </p>
                     </div>
                     <div class="patner-card">
-                        <img src="./jaysam.png" alt="jaysam Image" style="width: 80px;">
+                        <img src="./images/jaysam.png" alt="jaysam Image" style="width: 80px;">
                         <h3>Jaysam Media</h3>
                         <p>Lead photogrpher offering photography shoots in and outside Nairobi</p>
                     </div>
                     <div class="patner-card">
-                        <img src="./BNI_Logo.png" alt="BNI Image" style="width: 80px;">
+                        <img src="./images/BNI_Logo.png" alt="BNI Image" style="width: 80px;">
                         <h3>Binovlent</h3>
                         <p>The best manufacturer and supplier company for printing and branding materials</p>
                     </div>
@@ -201,7 +201,7 @@
                 <div class="steps-container">
                     
                     <div class="step">
-                      <img src="./dp,,.png" alt="the designer">
+                      <img src="./images/dp,,.png" alt="the designer">
                       <div class="step-title"> Designer's profile</div>
                       <div class="step-description">
                         You are free to choose the designer you want
@@ -214,6 +214,7 @@
                         <br> <strong>WhatsApp</strong> - 0718315868<br>
                             <strong>Instagram</strong> @duanixMedia<br>
                             <strong>Call/text</strong> - 0718315868.
+                            <p>call Us</p>
                       </div>
                     </div>
                     <div class="step">
