--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   <!--CUSTOMER CARE-->
                   <div class="container">
                     <div class="text-section">
-                        <h1>Best Services <span style="color: goldenrod;">Anywhere <br> And Anytime </span></h1>
+                        <h1>Best Services <span style="color: black;">Anywhere <br> And Anytime </span></h1>
                         <p>Access the best branding services at <br>the comfort of your home.<br>
                             <br>
                              We provide all services projected<br> to your needs by the help 
@@ -263,7 +263,7 @@
                     <img src="./images/collo11.jpeg" alt="Tutor" loading="eager" style="width: 80%;">   
                 </div>
                 <div class="content">
-                    <h1>Want to Learn  And <br> <span style="color: goldenrod;">Open your own</span><br> Branding premise?</h1>
+                    <h1>Want to Learn  And <br> <span style="color: black;">Open your own</span><br> Branding premise?</h1>
                     <p>We are priviledge to offer theory and<br> practical sessions to individuals <br>
                         interested in becoming self<br> employed at their own companies.
                     </p>
