--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="med-container">
                 <div class="column-left">
                     <h1>You Picture it   <br> We Brand it  </h1>
-                    <p>We offer Best Services to give you Gifts worth  your smiles <br> Because Cute Brands Win Hearts</p>
+                    <p>We offer Best Services to give you Gifts worth  your smiles <br> Because Cute Brands <br>Win Hearts.</p>
                     <br>
                     <p>Creating Smart Solutions for Your Brand is our top priority.</p>
                 </div>
@@ -71,7 +71,7 @@
                 </div>
                
                 </div>
-                <span style="font-size: 20px;">Play Video</span>
+                <span style="font-size: 20px;"> <b>Play Video</b></span>
             </div>               
         </section>
         
